1.13 -> 1.14:
    - jbj: start using poptArg and poptArgType() where useful.
    - jbj: poptint.h: add a poptArgType define for bitfield type abstraction.
    - jbj: poptint.h: add a poptArg union for opt->arg access without casts.
    - jbj: include "-- Terminate options" end-of-options msg in poptHelpOptions.
    - jbj: opt->argDescrip[0] determines "--foo=bar" or "--foo bar".
    - jbj: --long always padded for alignment with/without "-X, ".
    - jbj: Display shortName iff printable non-space.
    - jbj: POPT_AUTOALIAS: if no popt aliases/execs, don't display the sub-head.
    - jbj: add --libdir=/%{_lib} to popt.spec.
    - jbj: add .cvsignore to m4 subdirectory.
    - jbj: remove duplicate nb locale from ALL_LINGUAS.
    - jbj: autogen.sh: on linux, add --libdir=/lib (no /lib64 autodetect yet).

1.12 -> 1.13:
    - release popt-1.13.
    - jbj: add a %track section (as in rpm-5.0) to popt.spec.
    - jbj: chg poptGetOptArg() to "char *", document application needs to free.
    - jbj: re-add it.po (from Sandro Bonazzola <sandro.bonazzola@gmail.com>).
    - jbj: rescuscitate the splint annotations.
    - jbj: change sizeof to use the type implicitly, rather than explicitly.
    - jbj: remove incorrect casts, changing to size_t where needed.
    - jbj: remove unused STD_VFPRINTF macro.
    - jbj: reindent (and otherwise diddle) recent patch for popt coding style.
    - jbj: remove splint bounds/branch annotations, little gain, much pain.
    - jbj: revert alloca usage again again.
    - jbj: handle Solaris signed character isspace(3) issues consistently.
    - bero: read /etc/popt.d/* files.
    - jbj: don't read /etc/popt twice (#290531).
    - jbj: isspace(3) has i18n encoding signednesss issues on Solaris (#172393).
    - jbj: refactor column cursor to a structure, carry maxcols as well.
    - jbj: use TIOCGWINSZ to determine --help column wrapping.
    - jbj: help formatting for POPT_ARG_MAINCALL.